--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/d">best free website software</a></section><section class="header12 cid-qL88L4TNcr mbr-fullscreen mbr-parallax-background" id="header12-k">
+<section class="engine"><a href="https://mobirise.ws/f">simple site creator</a></section><section class="header12 cid-qL88L4TNcr mbr-fullscreen mbr-parallax-background" id="header12-k">
 
     
 
@@ -81,23 +81,18 @@
             <div class="media-container">
                 <div class="col-md-12 align-center">
                     <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-2"><br>dbprc– Einfachheit in einer neuen Dimension</h1>
-                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">Wer sind wir
+                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5"><strong>Wer sind wir</strong>
+<br><br>dbprc ist ein erfolgreicher mittelständischer IT-Dienstleister.
+<br>Wir sind ein innovatives Team von hochqualifizierten Informatikern und Entwicklern mit Niederlassungen in Mannheim und Pforzheim
 <br>
-<br>dbprc ist ein IT-Dienstleister in xxxx. 
-<br>Wir bieten unseren Kunden seit xxxx 
-<br>"maßgeschneiderte" Softwarelösungen von höchster Qualität und Zuverlässigkeit, 
-<br>dazu Projektunterstützung sowie Betreuung von IT-Anwendungssystemen. 
-<br>Unsere Kernkompetenz liegt in der ORACLE-Anwendungsentwicklung für Intranet und Internet(Cloud).
+<br>Unsere Kernkompetenz liegt in der ORACLE-Anwendungsentwicklung und der ganzheitlichen Beratung und Betreuung rund um ORACLE-Datenbanksystemen
 <br>
+<br>Unsere Kunden sind u.a. bundesweit verantwortliche öffentliche Organisationen und Unternehmen  der Privatwirtschaft
 <br>
-<br>
-<br>
-<br>was machen wir
-<br>
-<br>- Individuelle Softwareentwicklung (Oracle + Java + Android)
-<br>- Anwendungsbetreuung &amp; Support
-<br>- Weiterentwicklung schon bestehender Anwendungen
-<br>- Consulting bei Projekten</p>
+<br> 
+<br><strong>Was machen wir</strong>
+<br><br>Seit 1996 entwickeln wir für unsere Kunden individuelle und maßgeschneiderte Softwarelösungen von höchster Qualität und Zuverlässigkeit im Bereich 
+<br>ORACLE + Java + Android</p>
                     <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-secondary display-4" href="index.html">LIVE DEMO</a></div>
 
                     <div class="icons-media-container mbr-white">
