--- a/lösungen.html
+++ b/lösungen.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/a">best free site builder</a></section><section class="tabs3 cid-qLvZ2KRNWr mbr-parallax-background" id="tabs3-11">
+<section class="engine"><a href="https://mobirise.ws/e">best web builder software</a></section><section class="tabs3 cid-qLvZ2KRNWr mbr-parallax-background" id="tabs3-11">
 
     
 
@@ -154,9 +154,8 @@ Kriterien durchzusuchen.&nbsp;<br><br><br><br><br></p>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">
                                 Migration</h4>
-                            <p class="mbr-section-text  align-center mbr-fonts-style display-7">
-                                Cut down the development time with drag-and-drop website builder. Drop the blocks into the page, edit content inline and publish - no technical skills required.
-                            </p>
+                            <p class="mbr-section-text  align-center mbr-fonts-style display-7">Wollen Sie die Daten haben?
+<br><br>Wir organisieren für Sie eine Migration sowohl aus anderen non-Oracle Systemen in bestehendes System als auch umgekerht.</p>
                         </div>
 
                         <div class="col-xs-12 col-md-6 col-lg-4">
@@ -166,8 +165,7 @@ Kriterien durchzusuchen.&nbsp;<br><br><br><br><br></p>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">
                                 Cloud Lösungen</h4>
                             <p class="mbr-section-text  align-center mbr-fonts-style display-7">
-                                Cut down the development time with drag-and-drop website builder. Drop the blocks into the page, edit content inline and publish - no technical skills required.
-                            </p>
+                                Wenn Sie keine Hardware Infrastruktur haben möchten, und das Risiko von Hardwareausfall vermeiden wollen, dann setzen wir ihr System auf Cloud.&nbsp;<br></p>
                         </div>
 
                         
