--- a/referenzen.html
+++ b/referenzen.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">make own website</a></section><section class="counters1 counters cid-qOjRemNIBu" id="counters1-43">
+<section class="engine"><a href="https://mobirise.ws/q">website maker download</a></section><section class="counters1 counters cid-qOjRemNIBu" id="counters1-43">
 
     
 
@@ -234,7 +234,7 @@
 
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-img pb-3">
-                    <span class="mbr-iconfont mbri-devices"></span>
+                    <span class="mbr-iconfont mbri-map-pin"></span>
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">Geoinformationssysteme</h4>
