--- a/referenzen.html
+++ b/referenzen.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/q">website maker download</a></section><section class="counters1 counters cid-qOjRemNIBu" id="counters1-43">
+<section class="engine"><a href="https://mobirise.ws/o">mobile website builder</a></section><section class="counters1 counters cid-qOjRemNIBu" id="counters1-43">
 
     
 
@@ -227,7 +227,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
-                        Drukmanagementool</h4>
+                        Druckmanagementool</h4>
                     <p class="mbr-text mbr-fonts-style display-7">- Generierung der Berichten (100000 am Tag)<br>- Bereitstellung für Massendruck<br>- Zuordnung in die Datenbank<br>- Bereitstellung für Kuvertiermaschine</p>
                 </div>
             </div>
