--- a/team.html
+++ b/team.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/f">easy web maker</a></section><section class="carousel slide cid-qOHH7WRFZl" data-interval="false" id="slider1-4r">
+<section class="engine"><a href="https://mobirise.ws/g">how to create your own website</a></section><section class="carousel slide cid-qOHH7WRFZl" data-interval="false" id="slider1-4r">
 
     
 
